--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2844,7 +2844,7 @@ color: white;
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     Avoid getting used to specialized editors built for one particular language, such as RStudio for R &#40;or its newer version <a href=" https://posit.co/"> Posit</a>&#41;. The editors I mentioned were designed for coding, regardless of the programming language you choose. Mastering a general code editor will enhance your coding skills—you&#39;ll be able to apply the same tools and keyboard shortcuts to every language you work with.  </div>  </div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Privacy Alternative for VS Code</strong>  </span>  </div>  <div class=content>     VS Code is open-source software created and maintained by Microsoft. If you want a more privacy alternative that disables telemetry and tracking, you can install <a href="https://vscodium.com/">VS Codium</a>. This is a re-built of VS Code with exactly the same functionalities.  </div>  </div>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Privacy Version of VS Code</strong>  </span>  </div>  <div class=content>     VS Code is open-source software created and maintained by Microsoft. If you want a more private alternative that disables telemetry and tracking, <a href="https://vscodium.com/">VS Codium</a> is a re-built of VS Code.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2863,7 +2863,7 @@ color: white;
 <li><p><a href="https://discourse.julialang.org/">Julia Discourse</a>. Official forum to ask questions. </p>
 </li>
 </ol>
- <div style="visibility:hidden;margin-bottom:-2em">
+ <div style="visibility:hidden; margin-bottom:-2em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 </div>
@@ -2900,7 +2900,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 7, 2025 
+          © Martin Alfaro <br>Last Modified March 8, 2025 
       </span> 
   </div> 
 </footer>
