--- a/PAGES/02d_strings/index.html
+++ b/PAGES/02d_strings/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section presents standard types for text representation, where we distinguish between characters and strings. The coverage will be concise, as the website won&#39;t focus on string analysis.</p>
+<p>This section presents types for text representation, distinguishing between characters and strings. The coverage will be concise, as the website won&#39;t focus on string analysis. However, a minimum coverage is necessary as string variables are important for tasks like specifying paths, saving files, and other core functionalities. </p>
 <p>      </div>
     </div>
   </div>
@@ -2826,7 +2826,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Characters</h2> </p>
-<p>The <code>Char</code> type is used to represent individual characters. As it supports Unicode characters, it encompasses not only numbers and letters, but also a wide range of symbols. A character <code>x</code> is introduced by using the syntax <code>&#39;x&#39;</code>, as shown below.</p>
+<p>In Julia, the <code>Char</code> type is used to represent individual characters. A character <code>x</code> is introduced by using single quotes, as in <code>&#39;x&#39;</code>. Given its support for Unicode characters, <code>Char</code> encompasses not only numbers and letters, but also a wide range of symbols. This is shown below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2842,7 +2842,7 @@ y &#61; &#39;🐒&#39;</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>Notice that characters necessarily must be enclosed in single quotes <code>&#39; &#39;</code>, or otherwise Julia will interpret the expression as a variable. This holds even for symbols like 🐒.</p>
+<p>Notice that characters necessarily must be enclosed in single quotes <code>&#39; &#39;</code>, even for symbols like 🐒. Otherwise, Julia will interpret the expression as a variable.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2866,7 +2866,7 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Strings</h2> </p>
-<p>We&#39;ll rarely use the type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>, which is an ordered collection of characters that can represent text.</p>
+<p>We&#39;ll rarely use the type <code>Char</code> directly. Instead, we&#39;ll work with the so-called type <code>String</code>. This is an ordered collection of characters, making it possible to represent text.</p>
 <p>Strings can be defined through either double quotes <code>&quot; &quot;</code> or triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code>. The latter is particularly convenient for handling newlines, such as when the text has to span multiple lines. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For more on the differences between double and triple quotes, see <a href="https://docs.julialang.org/en/v1/manual/strings/#Triple-Quoted-String-Literals">here</a>  </span></span></p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2936,7 +2936,7 @@ output_text     &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * g
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 7, 2025 
+          © Martin Alfaro <br>Last Modified March 8, 2025 
       </span> 
   </div> 
 </footer>
