--- a/PAGES/02f_tuples/index.html
+++ b/PAGES/02f_tuples/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We continue our exploration of collections, defined as objects that store multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection known as  <em>tuples</em>. </p>
+<p>We continue our exploration of  <em>collections</em>, defined as objects storing multiple elements. Having previously focused on arrays, we&#39;ll now turn our attention to another form of collection known as  <em>tuples</em>. </p>
 <p>The defining characteristic of tuples is their fixed size and immutability. This implies that, once a tuple is created, its elements cannot be added, removed, or modified. While these restrictions might initially seem restrictive, they also bring a performance advantage when working with small collections.</p>
 <p>At this point, we&#39;ll only touch on the basics. A more in-depth exploration of tuples will follow in Part II, after we&#39;ve developed the necessary tools to fully appreciate their relevance.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
@@ -2847,7 +2847,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x&#91;1&#93;</code><br/><div class="akin_to_pre">4</div> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">x &#61; &#40;10,&#41;    # not x &#61; &#40;10&#41; because it&#39;d be interpreted as x &#61; 10</code></pre>
+<pre><code class="language-julia">x &#61; &#40;10,&#41;    # not x &#61; &#40;10&#41; &#40;it&#39;d be interpreted as x &#61; 10&#41;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">(10,)</div> </div></p>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x&#91;1&#93;</code><br/><div class="akin_to_pre">10</div> </div></div> </div> 
@@ -2907,7 +2907,7 @@ x &#61;  4,5,6           #alternative notation</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 7, 2025 
+          © Martin Alfaro <br>Last Modified March 8, 2025 
       </span> 
   </div> 
 </footer>
