--- a/PAGES/04c_conditionals/index.html
+++ b/PAGES/04c_conditionals/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In many real-world applications, programs may need to execute different operations depending on the input provided. To handle these scenarios effectively, programs must then be able to adapt the code accordingly. Conditional statements provide exactly this capability, allowing for contingent executions of code blocks.</p>
+<p>Programs routinely execute different operations based on their flow. To handle these scenarios, they must adapt their operations accordingly. Conditional statements provide this capability by enabling the contingent execution of code blocks. </p>
 <p>Each code block of a conditional statement is referred to as a <span style="color: rgb(62, 121, 180);"><strong>branch</strong></span>. Based on the number of branches, there are three types of conditional statements:</p>
 <div class="itemNoSpace"><ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>if-then statements</strong></span>, which consist of a <strong>single branch</strong>. They run a specific operation only if a condition is met, with no operation performed otherwise.</p>
@@ -2840,8 +2840,17 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>If-Then Statements</h2></p>
-<p>If-then statements execute an operation when a condition is met, and do nothing when the condition isn&#39;t satisfied. There are three ways to construct these statements: using the <code>if</code> keyword, and another two based on the logical operators <code>&amp;&amp;</code> and <code>||</code>.</p>
-<p>Below, you&#39;ll illustrate the syntax for each form. The examples rely on the <code>println</code> function, which displays the text included as its argument in the REPL.</p>
+<p>If-then statements execute an operation only when a condition is met, doing nothing instead when the condition isn&#39;t satisfied. These statements can be constructed via: </p>
+<ul>
+<li><p>the <code>if</code> keyword, </p>
+</li>
+<li><p>the logical operator <code>&amp;&amp;</code>, </p>
+</li>
+<li><p>the logical operator <code>||</code>.</p>
+</li>
+</ul>
+<p>The approach via <code>if</code> keyword is self-explanatory. As for the logical operators, <code>&amp;&amp;</code> executes an operation if the condition is true, whereas <code>||</code> does it when the condition is  <em>not</em> satisfied. In fact, <code>||</code> is equivalent to <code>&amp;&amp;</code> with its condition negated. </p>
+<p>Below, we illustrate the syntax for each form. The examples rely on the <code>println</code> function, which displays the text passed as argument in the REPL.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2873,12 +2882,12 @@ end</code></pre>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"><div class="akin_to_pre">"x is positive"</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>If-then statements imply that no action would&#39;ve been taken if, for instance, we had used <code>x &#61; -1</code> as a condition. It&#39;s only when <code>x &gt; 0</code> that <code>println</code> is executed. The approach based on the<code>if</code> keyword is somewhat verbose for simple conditional statements. However, it also offers the most flexibility, making it ideal for complex conditional statements.</p>
-<p>For simple statements, <code>&amp;&amp;</code> and <code>||</code> are more concise, helping us keep the code streamlined. Specifically, <code>&amp;&amp;</code> executes an operation if the condition is true, whereas <code>||</code> instead does it when the condition is  <em>not</em> satisfied. In fact, <code>||</code> is equivalent to <code>&amp;&amp;</code> with its condition negated. This can be appreciated in the example above, where we obtain the same results by flipping the condition <code>x ≤ 0</code> to <code>&#33;&#40;x &gt; 0&#41;</code>.</p>
+<p>Note that if-then statements imply that no action would&#39;ve been taken if, for instance, we had used <code>x &#61; -1</code> as a condition—it&#39;s only when <code>x &gt; 0</code> that <code>println</code> is executed. </p>
+<p>The <code>if</code> approach offers the most flexibility, making it ideal for complex conditional statements. However, it&#39;s somewhat verbose for simple conditional statements. For these cases, <code>&amp;&amp;</code> and <code>||</code> are preferred, as they help us keep the code streamlined.</p>
+<p>A common application of <code>||</code> is is in conjunction with the function <code>error</code> to handle errors. This construct immediately interrupts the script&#39;s execution when the condition isn&#39;t satisfied, displaying the provided message as the argument of <code>error</code>. For instance, consider a function <code>foo&#40;x&#41;</code> that requires non-negative values for <code>x</code>. To enforce this, you could include <code>x &gt; 0 || error&#40;&quot;x must be positive&quot;&#41;</code> at the beginning of the function. If <code>foo&#40;x&#41;</code> is then called with a non-positive <code>x</code>, it&#39;ll immediately halt its execution and print the error message &quot;x must be positive&quot; in the REPL.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Note that these operators behave like if-then statements because they combine a condition with an operation. This is different from using <code>&amp;&amp;</code> and <code>||</code> for conditions, where all operands must be <code>Bool</code> values.  </div>  </div>
-<p>If-then statements with <code>||</code> are often used to handle errors, or more generally to alert us about an issue. This requires combining <code>||</code> with the function <code>error</code>, which immediately interrupts the script&#39;s execution and displays the message provided in its argument. For instance, if you define a function <code>foo&#40;x&#41;</code> that only accepts non-negative values for <code>x</code> &#40;e.g., the logarithmic function&#41;, you could include <code>x &gt; 0 || error&#40;&quot;x must be positive&quot;&#41;</code> as the function&#39;s first line. Then, if you run <code>foo&#40;x&#41;</code> with a non-positive <code>x</code>, the function will stop and display the error message &quot;x must be positive&quot; in the REPL.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Note that <code>&amp;&amp;</code> and <code>||</code>  behave like if-then statements when they combine a condition with an operation. This is different from using them exclusively with conditions, where all operands would be <code>Bool</code> values.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2888,9 +2897,9 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>If-Else Statements</h2></p>
-<p>For their part, if-else statements execute an operation when a condition is true, executing another operation when the condition is false. There are two forms to write these statements.</p>
-<p>The first method is the most flexible, and is based on an extension of <code>if</code> through the keyword <code>else</code>. The second method instead relies on the so-called <span style="color: rgb(62, 121, 180);"><strong>ternary operator</strong></span>, which requires the keywords <code>?</code> and <code>:</code>. Its syntax is <code>&lt;condition&gt; ? &lt;operation if true&gt; : &lt;operation if false&gt;</code>, and is referred to as  <em>the</em> ternary operator since it&#39;s the only operator taking three arguments.</p>
-<p>We illustrate the syntax of each approach below.</p>
+<p>If-else statements execute an operation when a condition is true and another operation when the condition is false. There are two forms to write these statements.</p>
+<p>The first one is the most flexible and uses the <code>if</code> keyword in combination with <code>else</code>. The second method relies on the so-called <span style="color: rgb(62, 121, 180);"><strong>ternary operator</strong></span>, which requires the keywords <code>?</code> and <code>:</code> via the syntax <code>&lt;condition&gt; ? &lt;operation if true&gt; : &lt;operation if false&gt;</code>. This is referred to as  <em>the</em> ternary operator because it&#39;s the only operator in most programming languges that takes three arguments.</p>
+<p>We illustrate the syntax of both approaches below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2916,8 +2925,8 @@ x &gt; 0 ? println&#40;&quot;x is positive&quot;&#41; : println&#40;&quot;x is n
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"><div class="akin_to_pre">"x is positive"</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>An alternative for defining if-else expressions is provided by the function <code>ifelse</code>. This takes three arguments: a condition, an expression to be executed if true, and another expression to execute if false. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The function <code>ifelse</code> <strong>doesn't behave as a</strong> <a href="/julia_book/PAGES/04b_logical/#sub_logical_operators_as_shortcircuit_operators"><strong>short-circuit operator</strong></a>. This means that all statements are evaluated, regardless of whether the condition is true.  </span></span> </p>
-<p>Expressing an if-else statement through a function enables broadcasting. This is particularly helpful when defining vectors with elements that depend on a condition, as demonstrated below.</p>
+<p>The function <code>ifelse</code> offers an alternative for constructing if-else expressions. This function takes three arguments: a condition, an expression to be evaluated if the conditoin true, and another one if false. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The function <code>ifelse</code> does  <em>not</em> behave as a <a href="/julia_book/PAGES/04b_logical/#sub_logical_operators_as_shortcircuit_operators"><strong>short-circuit operator</strong></a>. This means that all the operations are computed, despite that only one of them will ultimately be returned as output.  </span></span> </p>
+<p>One advantage of using a function for an if-else statement is that it supports broadcasting. This is particularly helpful when creating vectors whose elements vary according to a condition, as demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2947,7 +2956,7 @@ x_absolute_value      &#61; ifelse.&#40;x .≥ 0, x, -x&#41;</code></pre>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Notice that broadcasting <code>ifelse</code> <strong>requires broadcasting both</strong> <code>ifelse</code> <strong>and the condition</strong>. The first example, for case, would throw an error if we only broadcast <code>ifelse</code>, as in <code>ifelse.&#40;x&gt;0, true, false&#41;</code>. This is because <code>x &gt; 0</code> would attempt to check if the  <em>entire vector</em> is positive, which is an operation undefined in Julia.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     Broadcasting <code>ifelse</code> <strong>requires broadcasting both</strong> <code>ifelse</code> <strong>and the condition</strong>. The first example, for case, would throw an error if we execute <code>ifelse.&#40;x&gt;0, true, false&#41;</code>. This is because <code>x &gt; 0</code> would attempt to check if the  <em>entire vector</em> is positive, which is an operation undefined in Julia.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2957,7 +2966,7 @@ x_absolute_value      &#61; ifelse.&#40;x .≥ 0, x, -x&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>If-Else-If Statements</h2></p>
-<p>So far, we’ve analyzed conditional statements with up to two operations: one if the condition is met, and another if it isn’t. However, this structure imposes some limitations when dealing with multiple alternatives. Basically, by only allowing for two possible outcomes, as it requires nesting multiple <code>if</code> and <code>else</code> statements to add new conditions.</p>
+<p>So far, we’ve analyzed conditional statements that handle only two possibilities: one when the condition is met, and another if it isn’t. This binary structure can be limiting when multiple alternatives need to be considered. Basically, it forces you to nest several <code>if</code> and <code>else</code> statements to manage additional conditions.</p>
 <p>To simplify this process, we can use the <code>elseif</code> keyword to extend the <code>if</code> and <code>else</code> approach. This is illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2990,7 +2999,8 @@ end</code></pre>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"><div class="akin_to_pre">"x is negative"</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The examples showcase the flexibility provided by the approach. For instance, the first example shows that <code>elseif</code> eliminates the need to specify what occurs in each scenario: it performs an action if <code>x</code> is positive, another action if <code>x</code> is zero, but does nothing otherwise. This contrast with the use of <code>if</code> and <code>else</code>, which requires structuring code to cover all possibilities exhaustively. Likewise, the second example demonstrates that <code>if</code>, <code>else</code>, and <code>elseif</code> keywords can be combined in multiple ways to achieve the desired program behavior.</p>
+<p>The first examples showcase the benefits provided by the approach. Specifically, <code>elseif</code> eliminates the need to explicitly specify actions for every possible scenario. Instead, it performs an action if <code>x</code> is positive, another action if <code>x</code> is zero, but it does nothing otherwise. In contrast, using <code>if</code> and <code>else</code> would require an exhaustive approach, where all possible contingents must be accounted for. </p>
+<p>Likewise, the second example demonstrates that combinations of the <code>if</code>, <code>else</code>, and <code>elseif</code> keywords are possible.</p>
 <p>      </div>
     </div>
   </div>
@@ -3013,7 +3023,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 7, 2025 
+          © Martin Alfaro <br>Last Modified March 8, 2025 
       </span> 
   </div> 
 </footer>
