--- a/PAGES/05f_indexing/index.html
+++ b/PAGES/05f_indexing/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Previous to mutating vectors, you need first to identify the specific elements to be modified. This process is known as <strong>vector indexing</strong>, and we&#39;ve already covered basic indexing methods. Specifically, the methods presented were based on vectors and ranges &#40;e.g., <code>x&#91;&#91;1,2,3&#93;&#93;</code> or <code>x&#91;1:3&#93;</code>&#41;. While these approaches are effective for simple selections, they fall short for more complex scenarios, such as selecting elements based on conditions. </p>
+<p>To be able to mutate vectors, you need first to identify the specific elements to be modified. This process is known as <strong>vector indexing</strong>. We&#39;ve already covered basic indexing methods throughout the website, including techniques based on vectors and ranges &#40;e.g., <code>x&#91;&#91;1,2,3&#93;&#93;</code> or <code>x&#91;1:3&#93;</code>&#41;. While these approaches are effective for simple selections, they fall short for more complex scenarios, such as selecting elements based on conditions. </p>
 <p>This section expands our toolkit by introducing more advanced forms of indexing. The techniques primarily build on broadcasting and Boolean operations.</p>
 <p>      </div>
     </div>
@@ -3091,7 +3091,7 @@ z &#61; x&#91;findall&#40;x .&gt; 7&#41;&#93;</code></pre>
  9</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The other function is <code>filter</code>, which returns the  <em>elements</em> of a vector <code>x</code> that satisfy a given condition. Despite what the name suggests, <code>filter</code> actually retain these elements, rather than discarding them. Similarly to <code>findall</code>, the condition in <code>filter</code> can be passed through a function or vector. In fact, the only difference between the functions is that <code>filter</code> returns the actual elements that meet the condition, whereas <code>findall</code> returns their corresponding indices.</p>
+<p>The other function is <code>filter</code>, which returns the  <em>elements</em> of a vector <code>x</code> satisfying a given condition. Despite what the name may suggest, <code>filter</code> retains elements rather than discarding them. Similarly to <code>findall</code>, the condition in <code>filter</code> can be passed through a function or vector. In fact, the only difference between the functions is that <code>filter</code> returns the actual elements that meet the condition, whereas <code>findall</code> returns their corresponding indices.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
