--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Mutability</h2></p>
-<p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> are designed to be flexible, allowing their elements to be modified, appended, or removed at will. A prime example of mutable objects is <strong>vectors</strong>.</p>
-<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent any additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes, and potentially leading to performance enhancements. Common examples of immutable objects include <strong>tuples</strong>, which remain fixed once created. </p>
+<p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> allow their elements to be modified, appended, or removed at will. These types of objects are designed to be flexible, with <strong>vectors</strong> constituting a prime example.</p>
+<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent any additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes and potentially entailing performance gains. A common example of immutable objects is <strong>tuples</strong>.</p>
 <p>This section will be relatively brief, focusing solely on the distinctions between mutable and immutable objects. Subsequent sections will expand on their uses and properties.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
@@ -2831,7 +2831,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Examples of Mutability and Immutability</h2></p>
-<p>To illustrate the consequences of immutability, the following examples attempt to modify existing elements of a collection. The examples use vectors as an example of mutability and tuples as an example of immutability. Additionally, we present the case of strings, which is a more nuanced example of immutability. Since strings are essentially sequences of characters, their immutability means that individual characters can’t be altered.</p>
+<p>To illustrate the consequences of immutability, the following examples attempt to modify existing elements of a collection. The examples rely on vectors as an example of mutable object and tuples for immutable ones. Additionally, we present the case of strings as another example of immutable object. Recall that strings are essentially sequences of characters, usually employed to represent text.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
