--- a/PAGES/07e_TS-onFunctions/index.html
+++ b/PAGES/07e_TS-onFunctions/index.html
@@ -2882,7 +2882,7 @@ foo&#40;&#41; &#61; 3 * x</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Functions and Methods</h2></p>
-<p>A <span style="color: rgb(62, 121, 180);"><strong>function</strong></span> is nothing but a name grouping an arbitrary number of methods. In turn, each <span style="color: rgb(62, 121, 180);"><strong>method</strong></span> defines a specific function body, according to the number and types of arguments. The list of methods associated with a function <code>foo</code> can be retrieved by executing <code>methods&#40;foo&#41;</code>.</p>
+<p>A <span style="color: rgb(62, 121, 180);"><strong>function</strong></span> is nothing but a name grouping an arbitrary number of methods. In turn, each <span style="color: rgb(62, 121, 180);"><strong>method</strong></span> defines a specific function body for a given number and types of arguments. The list of methods associated with a function <code>foo</code> can be retrieved in Julia by <code>methods&#40;foo&#41;</code>.</p>
 <p>To illustrate these concepts, let&#39;s consider an example where we explicitly define methods of a function <code>foo</code>. This functionality can be implemented through the operator <code>::</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
