--- a/PAGES/11e_multithread_loops/index.html
+++ b/PAGES/11e_multithread_loops/index.html
@@ -2834,7 +2834,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Parallelism is aimed at code that performs multiple operations, making it a natural fit for for-loops. By using the macro <code>@spawn</code> introduced in the previous section, we can parallelize for-loops through task-based parallelism. In an upcoming section, we&#39;ll demonstrate that <code>@spawn</code> is flexible enough to split iterations into tasks in various ways. For now, we&#39;ll consider a simple &#40;inefficient&#41; case where each iteration defines a separate task. The coding implementing this technique is shown below.</p>
+<p>Parallelism techniques are aimed at code that performs multiple operations. This makes it a natural fit for for-loops. By using the macro <code>@spawn</code> introduced in the previous section, we can parallelize for-loops through task-based parallelism. In an upcoming section, we&#39;ll demonstrate that <code>@spawn</code> is flexible enough to split iterations into tasks in various ways. For now, we&#39;ll consider a simple &#40;inefficient&#41; case where each iteration defines a separate task. The coding implementing this technique is shown below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
