--- a/PAGES/05c_mutation/index.html
+++ b/PAGES/05c_mutation/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The upcoming sections will be devoted to the concept of <strong>vector mutation</strong>. To properly cover this subject, we first need to introduce some preliminary concepts, including:</p>
+<p>The upcoming sections will be devoted to the concept of <strong>vector mutation</strong>. To properly cover this subject, we first need to understand some preliminary ideas, including:</p>
 <ul>
 <li><p>the distinction between assignments and mutations</p>
 </li>
@@ -2825,7 +2825,7 @@ color: white;
 <li><p>techniques for vector indexing to select elements</p>
 </li>
 </ul>
-<p>The current section in particular <strong>distinguishes between assignments and mutations of variables</strong>. The difference between them can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code> despite being fundamentally different. Clearly delineating these concepts is important not only in Julia, but also in other programming languages such as Python.</p>
+<p>The current section in particular <strong>distinguishes between assignments and mutations of variables</strong>. The difference between them can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code>, despite being fundamentally different. Clearly delineating these concepts is important not only in Julia, but also in other programming languages.</p>
 <p>      </div>
     </div>
   </div>
@@ -2835,7 +2835,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Some Background</h2></p>
-<p>Recall that a <strong>variable</strong> serves as a label for an <strong>object</strong>, which in turn holds a <strong>value</strong>. Additionally, objects can vary in the number of <strong>elements</strong> contained, ranging from single-element objects &#40;e.g. integers and floating-point numbers&#41; to collections &#40;e.g. vectors&#41;.</p>
+<p>Recall that a <strong>variable</strong> serves as a label for an <strong>object</strong>, where the object in turn holds a <strong>value</strong>. Objects can additionally be classified according to the number of <strong>elements</strong> contained, ranging from single-element objects &#40;e.g. integers and floating-point numbers&#41; to collections &#40;e.g. vectors&#41;.</p>
  <div class="multiple_pics">
 <div class="row" style="max-width:100%;">
   <div class="column2">
@@ -2858,7 +2858,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Assignments</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Assignments</strong></span> associate a variable with an object. Their implementation relies on the operator <code>&#61;</code>, as in statements like <code>x &#61; 3</code> or <code>x &#61; &#91;1,2,3&#93;</code>. In these examples, <code>3</code> and <code>&#91;1,2,3&#93;</code> represent the objects being assigned.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Assignments</strong></span> associate variables with objects. The implementation relies on the operator <code>&#61;</code>, as in statements like <code>x &#61; 3</code> or <code>x &#61; &#91;1,2,3&#93;</code>. In these examples, <code>3</code> and <code>&#91;1,2,3&#93;</code> represent the objects being assigned.</p>
 <p>The concept of assignments becomes clearer when we <strong>consider an object as a memory address</strong>. From this perspective, a statement like <code>x &#61; &#91;1,2,3&#93;</code> can be viewed as a two-step process:  <em>i</em>&#41; identifying a memory location to store the object with value <code>&#91;1,2,3&#93;</code>, and  <em>ii</em>&#41; labelling that memory location <code>x</code> for convenient access.</p>
 <p>      </div>
     </div>
@@ -3010,7 +3010,7 @@ x&#91;1&#93; &#61; 0</code></pre>
  5</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>If you&#39;d like <code>x</code> and <code>y</code> to be treated as separate objects, you must use the function <code>copy</code>. This function generates a new object that contains the same elements as the original, ensuring that  modifications to the new object don&#39;t affect the original.</p>
+<p>To treat <code>x</code> and <code>y</code> as separate objects, you must use the function <code>copy</code>. This generates a new object that contains the same elements as the original, ensuring that modifications to the new object don&#39;t affect the original.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
