--- a/PAGES/07d_TS-onTypes/index.html
+++ b/PAGES/07d_TS-onTypes/index.html
@@ -2834,7 +2834,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>High performance in Julia depends critically on the notion of type stability. Its definition is relatively straightforward: a function is type-stable when the types of its expressions can be inferred from the types of its arguments. When this property holds, Julia can specialize the computation method, resulting in significant performance gains.</p>
+<p>High performance in Julia depends critically on the notion of type stability. The definition of this concept is relatively straightforward: a function is type-stable when the types of its expressions can be inferred from the types of its arguments. If the property holds, Julia can specialize the computation method, resulting in significant performance gains.</p>
 <p>Despite its simplicity, type stability is subject to various nuances. In fact, a careful consideration requires a solid foundation in two key areas: <strong>Julia's type system and the inner workings of functions</strong>. The current section equips you with the necessary knowledge to grasp the former, deferring the internals of functions to the next section. Moreover, <strong>the explanations focus on the case of scalars and vectors</strong>, leaving more complex objects for subsequent sections.  </p>
 <p>Before you continue, I recommend reviewing the basics of types introduced <a href="/julia_book/PAGES/02b_variables/#types">here</a>.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
